# fort_chess

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.toml  rust-toolchain.toml
fort_builders/: Cargo.toml
fort_builders/src/: board.rs  game.rs  lib.rs  pieces.rs  player.rs
fort_builders/src/pieces/: piece_alignment.rs
resources/fort_builders/fc_dflt_player_conf/: fc_dflt_dfnd.json
resources/fort_builders/src/: board.rs  game.rs  lib.rs  pieces.rs  player.rs
resources/fort_builders/src/pieces/: piece_alignment.rs
resources/sound_lib/: Cargo.toml
src/: despawn_entity.rs  font.rs  game.rs  listener.rs  main.rs  startscreen.rs  state.rs  tiles.rs
src/game/: draw_piece.rs  game_end.rs  highlight.rs  player_name.rs
src/listener/: button.rs  click.rs  dice_roll.rs  hover.rs  possible_paths.rs  skip_turn.rs
src/listener/button/: dice_roll.rs  return_main.rs  skip_turn.rs
src/listener/possible_paths/: knight.rs  minister.rs  pawn.rs  queen.rs  rook.rs
src/startscreen/: expand.rs  name_input.rs  startbtn.rs
src/tiles/: block.rs
