[package]
name = "fort_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
fort_builders = {path = "resources/fort_builders"}
thiserror = "1.0.37"
