[package]
name = "fort_chess"
version = "0.1.0"
edition = "2021"

# Setting the local project with opt-level 1 to reduce cargo build time.
[profile.dev]
opt-level = 1

# The packages have opt level 3 as they are compiled once.
[profile.dev.package."*"]
opt-level = 3

# The release is compiled with full optimization.
[profile.release]
opt-level = 3

[dependencies]
bevy = {version = "0.8.1", features = ["dynamic"]}
fort_builders = {path = "fort_builders"}
